kubernetes/cloud-native-pg.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
