kubernetes/cloud-native-pg.yaml
# This file is generated. Do not edit manually.
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
