kubernetes/immich.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-upload-size
  namespace: immich
spec:
  # 参考：https://baerentsen.space/immich-issue/
  buffering:
    maxRequestBodyBytes: 0 # 制限を無効化
    maxResponseBodyBytes: 0
    memRequestBodyBytes: 20971520
    memResponseBodyBytes: 20971520
    retryExpression: "IsNetworkError() && Attempts() < 2"
