kubernetes/immich.yaml
# This file is generated. Do not edit manually.
apiVersion: v1
kind: Namespace
metadata:
  name: immich
