kubernetes/miniflux.db.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
