kubernetes/nfs-subdir-external-provisioner.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-subdir-external-provisioner
