kubernetes/nfs-subdir-external-provisioner.yaml
# This file is generated. Do not edit manually.
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-subdir-external-provisioner
