kubernetes/pdfding.template.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pdfding
