kubernetes/filestash.yaml
# 参考：https://www.filestash.app/docs/
#
# アプリ内での設定
# Storage で Local のみを有効にし、Path を /data に固定する
# Cloudflare 経由のリクエストボディーは 100MB までなので、Settings の upload_chunk_size を 100 未満（MB）にする
#
# filestash の配置されるノードが増えたら、NFS の exports の設定を書き換える
# nixos/configuration/gmk/photo-file-server.nix
apiVersion: v1
kind: Namespace
metadata:
  name: filestash
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filestash
  namespace: filestash
spec:
  rules:
    - host: filestash.kakkun61.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filestash
                port:
                  number: 8334
    - host: filestash.local.kakkun61.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filestash
                port:
                  number: 8334
---
apiVersion: v1
kind: Service
metadata:
  name: filestash
  namespace: filestash
spec:
  type: ClusterIP
  ports:
    - port: 8334
      targetPort: 8334
      protocol: TCP
  selector:
    app: filestash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filestash
  namespace: filestash
spec:
  replicas: 1
  strategy:
    # SQLite のデータベースに 2 つの Pod から同時に書き込まないようにする
    type: Recreate
  selector:
    matchLabels:
      app: filestash
  template:
    metadata:
      labels:
        app: filestash
    spec:
      securityContext:
        # gmk の kazuki:wheel に合わせる
        runAsUser: 1000
        runAsGroup: 1
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - name: filestash
          image: machines/filestash:latest@sha256:4c8654a44cd6cfd65f637513c3b84030bfeaa3091223b930058ac3ede4617cfa
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8334
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8334
            timeoutSeconds: 10
            periodSeconds: 20
          volumeMounts:
            - name: state
              mountPath: /app/data/state
            - name: photos
              mountPath: /data/photos
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 1Gi
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: state
        - name: photos
          persistentVolumeClaim:
            claimName: photos
