kubernetes/hollo.yaml
# 参考：https://docs.hollo.social/install/docker/
#      https://docs.hollo.social/install/env/
apiVersion: v1
kind: Namespace
metadata:
  name: hollo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hollo
  namespace: hollo
spec:
  rules:
    - host: ap.kakkun61.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hollo
                port:
                  number: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hollo
  namespace: hollo
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: hollo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hollo
  namespace: hollo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hollo
  template:
    metadata:
      labels:
        app: hollo
    spec:
      containers:
        - name: hollo
          image: ghcr.io/fedify-dev/hollo:0.9.18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/hollo
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: storage
