kubernetes/miniflux.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
spec:
  rules:
    - host: miniflux.kakkun61.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: miniflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux
  namespace: miniflux
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: ghcr.io/miniflux/miniflux:2.2.18
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
